@@ -125,6 +125,11 @@ array with up to three elements.</p>
 </li>
 </ul>
 <ul>
+<li><a href="AppKit/HotKeyPYthon">HotKeyPython</a><p>Demonstrates how to use Carbon global hot keys from a PyObjC application.
+Also demonstrates how to use a <code><span>NSApplication</span></code> subclass.</p>
+</li>
+</ul>
+<ul>
 <li><a href="AppKit/iClass">iClass</a><p>A more elaborate class browser; demonstrates <code><span>NSOutlineView</span></code> and
 <code><span>NSTableView</span></code>.</p>
 </li>
@@ -189,6 +194,15 @@ contains an <code><span>Xcode</span></code> project as well as a <code><span>set
 <li><a href="CocoaBindings/TableModelWithSearch">TableModelWithSearch</a><p>A more advanced example of Key-Value Coding. This uses a custom 
 <code><span>NSArrayController</span></code>.  Contains contains an <code><span>Xcode</span></code> project
 as well as a <code><span>setup.py</span></code> script.</p>
+</li>
+</ul>
+<ul>
+<li><a href="CocoaBindings/ManualBindings">ManualBindings</a><p>A simple example that illustrates establishing bindings
+programmatically, including a number of options such as validation
+and an array operator, and indexed accessor methods. A custom model
+object implements custom validation method.</p>
+<p>Originally from <a href="http://homepage.mac.com/mmalc/CocoaExamples/controllers.html">Cocoa Bindings Examples and Hints</a>,
+converted to PyObjC by ufiedler.</p>
 </li>
 </ul>
 <h2><a name="opengl">OpenGL</a></h2>
