@@ -10,6 +10,11 @@ Version 1.3 (2005-03-??)
 - (UNFINISHED) New RemotePyInterpreter example that demonstrates an
   out-of-process Python interpreter (primarily for IDE uses).
 
+- New ManualBindings example in CocoaBindings that demonstrates how
+  to develop programmatic bindings from a PyObjC application.
+  Converted to PyObjC by ufielder from the "Cocoa Bindings and Hints"
+  example of the same name.
+
 - New HotKeyPython example in AppKit that demonstrates how to use
   Carbon global hot keys from a PyObjC application.  Also demonstrates
   how to use a NSApplication subclass.
